adding LOCALE flag

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -68,7 +68,7 @@ jobs:
           echo :5432:*:user:user >> .pgpass
           mkdir build
           cd build
-          cmake -DHTML=ON -DPGR_WORKSHOP=ON -DES=ON ..
+          cmake -DLOCALE=ON -DPGR_WORKSHOP=ON -DES=ON ..
         env:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
