--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -59,7 +59,7 @@ jobs:
           mkdir -p  ~/Desktop/workshop-2019
           mkdir build
           cd build
-          cmake -DHTML=ON -DPGR_WORKSHOP_DEBUG=ON -DES=ON ..
+          cmake -DLINKCHECK=ON -DPGR_WORKSHOP_DEBUG=ON -DES=ON ..
         env:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
