[tx] updating for downloading

--- a/.tx/config
+++ b/.tx/config
@@ -2,115 +2,115 @@
 host = https://www.transifex.com
 type = PO
 
-[pgrouting-workshop.index]
+[pgrouting-workshop.locale-en-lc-messages-index-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/index.po
 source_file = locale/pot/index.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--appendix-1]
+[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-1-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-1.po
 source_file = locale/pot/chapters/appendix-1.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--appendix-2]
+[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-2-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-2.po
 source_file = locale/pot/chapters/appendix-2.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--appendix-3]
+[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-3-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-3.po
 source_file = locale/pot/chapters/appendix-3.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--appendix-4]
+[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-4-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-4.po
 source_file = locale/pot/chapters/appendix-4.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--appendix-5]
+[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-5-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-5.po
 source_file = locale/pot/chapters/appendix-5.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--appendix-6]
+[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-6-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-6.po
 source_file = locale/pot/chapters/appendix-6.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-1]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-1-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-1.po
 source_file = locale/pot/chapters/chapter-1.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-10]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-10-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-10.po
 source_file = locale/pot/chapters/chapter-10.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-11]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-11-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-11.po
 source_file = locale/pot/chapters/chapter-11.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-12]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-12-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-12.po
 source_file = locale/pot/chapters/chapter-12.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-2]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-2-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-2.po
 source_file = locale/pot/chapters/chapter-2.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-3]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-3-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-3.po
 source_file = locale/pot/chapters/chapter-3.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-4]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-4-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-4.po
 source_file = locale/pot/chapters/chapter-4.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-5]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-5-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-5.po
 source_file = locale/pot/chapters/chapter-5.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-6]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-6-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-6.po
 source_file = locale/pot/chapters/chapter-6.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-7]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-7-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-7.po
 source_file = locale/pot/chapters/chapter-7.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-8]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-8-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-8.po
 source_file = locale/pot/chapters/chapter-8.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--chapter-9]
+[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-9-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-9.po
 source_file = locale/pot/chapters/chapter-9.pot
 source_lang = en
