--- a/docs/interactions/code/CMakeLists.txt
+++ b/docs/interactions/code/CMakeLists.txt
@@ -3,25 +3,25 @@
 #---------------------
 # Files
 #---------------------
+
 set(PGR_WORKSHOP_FILES
-mapconfig_sample.xml
+  )
+
+set(FOO_FILES
 ol-routing-base.html
 ol-routing-final.html
-osm2pgroutingVersion.txt
-osm_sample.osm
-  )
-set(FOO_FILES
+osm2pgroutingOutput.txt
 create-test.sh
 functions.sql
 QGISfunctions.sql
-    )
+  )
 
 
 #---------------------
 # Directories
 #---------------------
 set(PGR_WORKSHOP_SUBDIRS
-    )
+  )
 
 
 
@@ -30,16 +30,16 @@ set(PGR_WORKSHOP_SUBDIRS
 #---------------------------------------------
 
 foreach (dir ${PGR_WORKSHOP_SUBDIRS})
-    if (PGR_WORKSHOP_DEBUG)
-        message(STATUS "   Adding directory ${dir}")
-    endif()
-    add_subdirectory(${dir})
+  if (PGR_WORKSHOP_DEBUG)
+    message(STATUS "   Adding directory ${dir}")
+  endif()
+  add_subdirectory(${dir})
 endforeach()
 
 foreach (f ${PGR_WORKSHOP_FILES})
-    if (PGR_WORKSHOP_VERBOSE_DEBUG)
-        message(STATUS "    Adding file ${f}")
-    endif()
-    configure_file(${f} ${f})
+  if (PGR_WORKSHOP_VERBOSE_DEBUG)
+    message(STATUS "    Adding file ${f}")
+  endif()
+  configure_file(${f} ${f})
 endforeach()
 
