processing un_sdg documentation

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(scripts)
 add_subdirectory(general-intro)
 add_subdirectory(basic)
 add_subdirectory(advanced)
+add_subdirectory(un_sdg)
 add_subdirectory(examples)
 add_subdirectory(interactions)
 add_subdirectory(appendix)
