Fixing some sphinx errors

--- a/docs/interactions/code/CMakeLists.txt
+++ b/docs/interactions/code/CMakeLists.txt
@@ -5,11 +5,11 @@
 #---------------------
 
 set(PGR_WORKSHOP_FILES
-  )
+  ol-routing-base.html
+  ol-routing-final.html
+)
 
 set(FOO_FILES
-ol-routing-base.html
-ol-routing-final.html
 osm2pgroutingOutput.txt
 create-test.sh
 functions.sql
@@ -17,24 +17,9 @@ QGISfunctions.sql
   )
 
 
-#---------------------
-# Directories
-#---------------------
-set(PGR_WORKSHOP_SUBDIRS
-  )
-
-
-
 #---------------------------------------------
-# Adding the documentation subdirectories & files
+# Adding the documentation files
 #---------------------------------------------
-
-foreach (dir ${PGR_WORKSHOP_SUBDIRS})
-  if (PGR_WORKSHOP_DEBUG)
-    message(STATUS "   Adding directory ${dir}")
-  endif()
-  add_subdirectory(${dir})
-endforeach()
 
 foreach (f ${PGR_WORKSHOP_FILES})
   if (PGR_WORKSHOP_VERBOSE_DEBUG)
