--- a/docs/scripts/un_sdg/sdg3/CMakeLists.txt
+++ b/docs/scripts/un_sdg/sdg3/CMakeLists.txt
@@ -4,7 +4,16 @@
 # Files
 #---------------------
 set(PGR_WORKSHOP_FILES
+  # TODO these files need to be processed
+  create_mumbai.sh
   get_mumbai.sh
+  import_mumbai_roads.sh
+  import_mumbai_buildings.sh
+  all_exercises_sdg1.sql
+
+  # TODO these files need to be generated
+  import_mumbai_roads.txt
+  import_mumbai_buildings.txt
     )
 
 
