un Organizing images

--- a/docs/un_sdg/images/CMakeLists.txt
+++ b/docs/un_sdg/images/CMakeLists.txt
@@ -3,13 +3,9 @@
 # Directories
 #---------------------
 set(PGR_WORKSHOP_IMG_SUBDIRS
-   Entry_points_of_proposed_locations.png
-   remove_disconnected_roads.png
-   roads_and_buildings.png
-   un_17_sdgs.png
-   un_logo.jpg
-   un_sdg11.png
-   un_sdg3.png
+  introduction
+  sdg3
+  sdg11
   )
 
 
