Fixing Sphinx errors

--- a/docs/scripts/un_sdg/CMakeLists.txt
+++ b/docs/scripts/un_sdg/CMakeLists.txt
@@ -5,3 +5,5 @@ add_custom_target(un_scripts ALL)
 
 add_subdirectory(sdg3)
 add_dependencies(un_scripts un_sdg3_scripts)
+add_subdirectory(sdg11)
+add_dependencies(un_scripts un_sdg11_scripts)
