Adding scripts and documentation for Chapter 5 and modifications in  Chapter 4

--- a/docs/scripts/un_sdg/CMakeLists.txt
+++ b/docs/scripts/un_sdg/CMakeLists.txt
@@ -7,3 +7,5 @@ add_subdirectory(sdg3)
 add_dependencies(un_scripts un_sdg3_scripts)
 add_subdirectory(sdg11)
 add_dependencies(un_scripts un_sdg11_scripts)
+add_subdirectory(sdg7)
+add_dependencies(un_scripts un_sdg7_scripts)
