Adding scripts and documentation for Chapter 3 SDG 3

--- a/docs/un_sdg/images/sdg3/CMakeLists.txt
+++ b/docs/un_sdg/images/sdg3/CMakeLists.txt
@@ -4,6 +4,12 @@
 #---------------------
 set(PGR_WORKSHOP_IMG_FILES
   un_sdg3.png
+  remove_disconnected_roads.png
+  roads_and_buildings.png
+  finding_closest_vertex.png
+  service_area.png
+  generalised_service_area.png
+  road_population.png
   )
 
 
