--- a/docs/scripts/un_sdg/sdg11/CMakeLists.txt
+++ b/docs/scripts/un_sdg/sdg11/CMakeLists.txt
@@ -11,6 +11,15 @@ set(PGR_WORKSHOP_FILES
   import_bangladesh_waterways.sh
 
   # TODO these files need to be generated
+  import_bangladesh_waterways.txt 
+  count_waterways.txt
+  creating_buffers.txt
+  setting_search_path.txt
+  connected_components.txt
+  creating_buffers_city.txt
+  Intersecting_components.txt
+  import_bangladesh_waterways.txt
+  creating_rain_zones_buffers_waterways.txt
     )
 
 
