[sdg3] generating automatically
* [sdg3] generated automatically
* [CI] testing only english
* [build] fixing targent name and position
* [lint] Exercise_N -> exerices_N in sdg3
* [lint] Appendix_SDG.rst -> appendix_sdg.rst
* [lint] removing unused files
* [lint] removing more unused files
* [lint] optimal_locations_through_service_area.sql
* [build] get Bangladesh data snapshopt
* [build] create bangladesh database

--- a/docs/scripts/un_sdg/CMakeLists.txt
+++ b/docs/scripts/un_sdg/CMakeLists.txt
@@ -1,7 +1,20 @@
+#---------------------
+# Files
+#---------------------
+set(PGR_WORKSHOP_FILES
+buildings.xml
+waterways.xml
+)
+foreach (f ${PGR_WORKSHOP_FILES})
+    if (PGR_WORKSHOP_VERBOSE_DEBUG)
+        message(STATUS "    Adding file ${f}")
+    endif()
+    configure_file(${f} sdg3/${f})
+endforeach()
+
+
+
 add_custom_target(un_scripts ALL)
-
-## directory with no files
-
 
 add_subdirectory(sdg3)
 add_dependencies(un_scripts un_sdg3_scripts)
