generating get-data automatically for sdg3

--- a/docs/scripts/un_sdg/sdg3/CMakeLists.txt
+++ b/docs/scripts/un_sdg/sdg3/CMakeLists.txt
@@ -4,16 +4,18 @@
 # Files
 #---------------------
 set(PGR_WORKSHOP_FILES
-  # TODO these files need to be processed
   create_mumbai.sh
-  get_mumbai.sh
+  get_mumbai_data.sh
   import_mumbai_roads.sh
   import_mumbai_buildings.sh
+
+  # TODO these files need to be processed
   all_exercises_sdg3.sql
 
+  # works but does not need to be processed
+  get_mumbai.sh
+
   # TODO these files need to be generated
-  import_mumbai_roads.txt
-  import_mumbai_buildings.txt
   Exercise_5.txt
   Exercise_6.txt
   Exercise_7.txt
@@ -44,3 +46,33 @@ foreach (f ${PGR_WORKSHOP_FILES})
     configure_file(${f} ${f})
 endforeach()
 
+if (NOT EXISTS mumbai.osm)
+execute_process(
+  OUTPUT_FILE mumbai.osm
+  COMMAND bash get_mumbai_data.sh
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  INPUT_FILE get_mumbai_data.sh
+  )
+endif()
+
+
+execute_process(
+  OUTPUT_FILE created_mumbai.txt
+  COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/create_mumbai.sh > created_mumbai.txt
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  INPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/create_mumbai.sh
+  )
+
+execute_process(
+  OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_buildings.txt
+  COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_buildings.sh > ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_buildings.txt
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  INPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_buildings.sh
+  )
+
+execute_process(
+  OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_roads.txt
+  COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_roads.sh > ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_roads.txt
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  INPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/import_mumbai_roads.sh
+  )
