--- a/docs/scripts/un_sdg/sdg3/CMakeLists.txt
+++ b/docs/scripts/un_sdg/sdg3/CMakeLists.txt
@@ -6,6 +6,7 @@ add_custom_target(un_sdg3_scripts)
 set(PGR_WORKSHOP_FILES
   create_mumbai.sh
   get_mumbai_data.sh
+  get_mumbai.sh
   import_mumbai_roads.sh
   import_mumbai_buildings.sh
   all_exercises_sdg3.sql
