[build] generating the results automatically for sdg11

--- a/docs/scripts/un_sdg/sdg11/CMakeLists.txt
+++ b/docs/scripts/un_sdg/sdg11/CMakeLists.txt
@@ -1,4 +1,4 @@
-
+add_custom_target(un_sdg11_scripts)
 
 #---------------------
 # Files
@@ -6,28 +6,11 @@
 set(PGR_WORKSHOP_FILES
   get_bangladesh.sh
   get_bangladesh_data.sh
-
-  # TODO these files need to be processed
-  all_exercises_sdg11.sql
   create_bangladesh.sh
   import_bangladesh_waterways.sh
+  all_exercises_sdg11.sql
+)
 
-  # TODO these files need to be generated
-  import_bangladesh_waterways.txt
-  Exercise_1.txt
-  Exercise_6.txt
-  Exercise_7.txt
-  Exercise_8.txt
-  Exercise_9.txt
-  Exercise_10.txt
-  Exercise_11.txt
-  Exercise_12.txt
-  Exercise_13.txt
-  Exercise_14.txt
-    )
-
-
-add_custom_target(un_sdg11_scripts)
 #---------------------------------------------
 # Adding the documentation files
 #---------------------------------------------
@@ -55,3 +38,28 @@ execute_process(
   INPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/create_bangladesh.sh
   )
 
+execute_process(
+  OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/import_bangladesh_waterways.txt
+  COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/import_bangladesh_waterways.sh > ${CMAKE_CURRENT_BINARY_DIR}/import_bangladesh_waterways.txt
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  INPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/import_bangladesh_waterways.sh
+  )
+
+add_custom_command(
+  TARGET un_sdg11_scripts
+  PRE_BUILD
+  BYPRODUCTS
+    exercise_1.txt
+    exercise_2.txt
+    exercise_3.txt
+    exercise_4.txt
+    exercise_5.txt
+    exercise_6.txt
+    exercise_7.txt
+    exercise_8.txt
+    exercise_9.txt
+    exercise_10.txt
+  COMMAND psql -d bangladesh -f all_exercises_sdg11.sql
+  COMMENT "running sdg11 scripts"
+  DEPENDS all_exercises_sdg11.sql
+  )
